--- a/index.html
+++ b/index.html
@@ -132,9 +132,73 @@
     padding: 6px 12px;
     font-size: 13px;
   }
+  /* Modal styles */
+  .modal-overlay {
+    display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background: rgba(0, 0, 0, 0.5);
+    z-index: 1000;
+    backdrop-filter: blur(2px);
+  }
+  .modal {
+    position: fixed;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    background: white;
+    padding: 20px;
+    border-radius: 6px;
+    box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
+    max-width: 90%;
+    width: 400px;
+    z-index: 1001;
+  }
+  .modal-content {
+    margin-bottom: 20px;
+  }
+  .modal-buttons {
+    text-align: right;
+  }
+  .modal-close {
+    background: #6c757d;
+    color: white;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 4px;
+    cursor: pointer;
+  }
+  .modal-close:hover {
+    background: #5a6268;
+  }
+  .modal-confirm {
+    background: #dc3545;
+    color: white;
+    border: none;
+    padding: 8px 16px;
+    border-radius: 4px;
+    cursor: pointer;
+    margin-left: 10px;
+  }
+  .modal-confirm:hover {
+    background: #c82333;
+  }
 </style>
 </head>
 <body>
+  <!-- Modal component -->
+  <div class="modal-overlay" id="modal-overlay">
+    <div class="modal">
+      <div class="modal-content" id="modal-content"></div>
+      <div class="modal-buttons">
+        <button class="modal-close" id="modal-close">Close</button>
+        <button class="modal-confirm" id="modal-confirm" style="display: none;">Confirm</button>
+      </div>
+    </div>
+  </div>
   <div id="container">
     <h1>Local Network Event Scheduler</h1>
     <div id="login-container" style="display:none;">
@@ -166,6 +230,39 @@
 
 <script>
 (() => {
+  // Modal functionality
+  const modalOverlay = document.getElementById('modal-overlay');
+  const modalContent = document.getElementById('modal-content');
+  const modalClose = document.getElementById('modal-close');
+  const modalConfirm = document.getElementById('modal-confirm');
+  
+  // Show modal with message
+  function showModal(message, confirmCallback = null) {
+    modalContent.textContent = message;
+    modalOverlay.style.display = 'block';
+    if (confirmCallback) {
+      modalConfirm.style.display = 'inline-block';
+      modalConfirm.onclick = () => {
+        hideModal();
+        confirmCallback();
+      };
+    } else {
+      modalConfirm.style.display = 'none';
+    }
+  }
+  
+  // Hide modal
+  function hideModal() {
+    modalOverlay.style.display = 'none';
+    modalConfirm.onclick = null;
+  }
+  
+  // Close modal on button click or overlay click
+  modalClose.addEventListener('click', hideModal);
+  modalOverlay.addEventListener('click', (e) => {
+    if (e.target === modalOverlay) hideModal();
+  });
+  
   const loginContainer = document.getElementById('login-container');
   const mainContainer = document.getElementById('main-container');
   const loginForm = document.getElementById('login-form');
@@ -383,7 +480,7 @@
   // Submit edited event to server
   async function submitEdit(id, date, title, details) {
     if (!date || !title.trim()) {
-      alert('Date and title are required.');
+      showModal('Date and title are required.');
       return;
     }
     try {
@@ -399,24 +496,25 @@
       editingEventId = null;
       await loadEvents();
     } catch (err) {
-      alert('Error updating event: ' + err.message);
+      showModal('Error updating event: ' + err.message);
     }
   }
 
   // Delete event by ID
   async function deleteEvent(id) {
-    if (!confirm('Are you sure you want to delete this event?')) return;
-    try {
-      const res = await fetch(`/api/events/${id}`, { method: 'DELETE' });
-      if (!res.ok) {
-        const data = await res.json();
-        throw new Error(data.error || 'Failed to delete event');
+    showModal('Are you sure you want to delete this event?', async () => {
+      try {
+        const res = await fetch(`/api/events/${id}`, { method: 'DELETE' });
+        if (!res.ok) {
+          const data = await res.json();
+          throw new Error(data.error || 'Failed to delete event');
+        }
+        if (editingEventId === id) editingEventId = null;
+        await loadEvents();
+      } catch (err) {
+        showModal('Error deleting event: ' + err.message);
       }
-      if (editingEventId === id) editingEventId = null;
-      await loadEvents();
-    } catch (err) {
-      alert('Error deleting event: ' + err.message);
-    }
+    });
   }
 
   // Login form submit handler
@@ -437,6 +535,12 @@
     }
   });
 
+  // Set minimum date for event input
+  function setMinDate() {
+    const today = new Date().toISOString().split('T')[0];
+    eventDateInput.min = today;
+  }
+
   // Add event form submit handler
   eventForm.addEventListener('submit', async e => {
     e.preventDefault();
@@ -444,6 +548,15 @@
     const date = eventDateInput.value;
     const title = eventTitleInput.value.trim();
     const details = eventDetailsInput.value.trim();
+    
+    // Check for past dates
+    const today = new Date().toISOString().split('T')[0];
+    if (date < today) {
+      eventError.textContent = 'Cannot create events for past dates.';
+      eventError.style.display = 'block';
+      return;
+    }
+
     if (!date || !title) {
       eventError.textContent = 'Date and title are required.';
       eventError.style.display = 'block';
@@ -501,6 +614,7 @@
 
   // Initialize UI on page load
   initialize();
+  setMinDate(); // Set initial minimum date for event input
 
   // Start/stop polling based on visibility
   document.addEventListener('visibilitychange', () => {
